# modulix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.py  setup.py
.github/workflows/: build-linux.yml  build-windows.yml
apps/modulix/: Main.cpp  Precompiled.hpp  WorkflowEditor.hpp  WorkflowEditorWindow.cpp  WorkflowEditorWindow.hpp
apps/modulix/data/: imgui.ini
data/umbellula/: umbellula.txt
docs/: README.md  TODO.md
src/Engine/: Module.hpp  Workflow.hpp
src/Gui/: Application.cpp  Gui.cpp
src/Log/: ImGuiLogger.hpp  Log.hpp
src/Modules/: BlurImage.hpp  DrawObjects.hpp  LoadImage.hpp  OnnxDetection.hpp  PerfTestCV.hpp  PerfTestCVIterate.hpp  SaveImage.hpp  Start.hpp
src/Plot/: CvPlot.cpp  ImGuiPlot.cpp  PlotBase.hpp
src/Utils/: Async.hpp  Exception.hpp
tools/setup/: buildtools.py  configuration.py  linux.py  onnxruntime.py  opencv.py  windows.py
tools/utils/: utils.py
